--- a/pubSubContract/app/package.json
+++ b/pubSubContract/app/package.json
@@ -4,6 +4,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "web3": "^1.8.1"
   }
 }
