--- a/studentNumberContract/app/package.json
+++ b/studentNumberContract/app/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "main": "index.js",
+    "type": "module"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "web3": "^1.8.1"
   }
