remove extra function and added commands

--- a/pubSubContract/app/.env.exemple
+++ b/pubSubContract/app/.env.exemple
@@ -1,4 +1,7 @@
 HOST='ws://127.0.0.1'
 PORT=7545
-SENDER_ADDRESS='0x46B8473d6A778321E89765031b3e8de35d19B6bb'
-CONTRACT_ADDRESS='0xF616D742b9Dffe482A87b9640e66202fba9db71e'
+BROKER_PORT=3001
+BROKER_ENDPOINT='ws://127.0.0.1:3001'
+PUBLISHER_ADDRESS='0xA26AF11b201035EF8CD0B4950fCfe80591c2617b'
+SUBSCRIBER_ADDRESS='0xE9b440ce4Ed4030e854d441fC3ff20e46C73E657'
+CONTRACT_ADDRESS='0x2612e0D63Ca8BA492F2e4A3A56845693f0FFd833'
