--- a/pubSubContract/app/package.json
+++ b/pubSubContract/app/package.json
@@ -1,6 +1,9 @@
 {
   "scripts": {
-    "start": "node index.js"
+    "start": "node broker.js",
+    "broker": "node broker.js",
+    "publisher": "node publisher.js",
+    "subscriber": "node subscriber.js"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
