--- a/pubSubContract/app/package.json
+++ b/pubSubContract/app/package.json
@@ -1,9 +1,16 @@
 {
   "scripts": {
-    "start": "node index.js"
+    "start": "node broker.js",
+    "broker": "node broker.js",
+    "publisher": "node publisher.js",
+    "subscriber": "node subscriber.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "web3": "^1.8.1"
   }
 }
